Bug 1627275 - Let ScriptLoader::OnStreamComplete return an error when verification or processing of the script fails, r=baku

Differential Revision: https://phabricator.services.mozilla.com/D69606